Started the 'Add New Ingredients' view

--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -35,11 +35,15 @@
             android:name="com.cmput301w13t09.cmput301project.activities.MyRecipesView"
             android:exported="false"
             android:label="@string/title_activity_my_recipes_view" >
-            <intent-filter >
-                <action android:name="activities.MyRecipes"/>
-                
+            <intent-filter>
+                <action android:name="activities.MyRecipes" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cmput301w13t09.cmput301project.AddNewIngredient"
+            android:label="@string/title_activity_add_new_ingredient" >
         </activity>
     </application>
 
