--- a/CMPUT301Project/bin/AndroidManifest.xml
+++ b/CMPUT301Project/bin/AndroidManifest.xml
@@ -42,8 +42,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmput301w13t09.cmput301project.AddNewIngredient"
+            android:name="com.cmput301w13t09.cmput301project.activities.AddNewIngredient"
+            android:exported="false"
             android:label="@string/title_activity_add_new_ingredient" >
+            <intent-filter>
+                <action android:name="activities.AddIngredient"/>
+                
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
         </activity>
     </application>
 
