--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -51,6 +51,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.cmput301w13t09.cmput301project.activities.AddNewIngredient"
+            android:exported="false"
+            android:label="@string/title_activity_add_new_ingredient" >
+            <intent-filter>
+                <action android:name="activities.AddIngredient"/>
+                
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
