--- a/CMPUT301Project/bin/AndroidManifest.xml
+++ b/CMPUT301Project/bin/AndroidManifest.xml
@@ -52,7 +52,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmput301w13t09.cmput301project.activities.AddNewIngredient"
+            android:name="com.cmput301w13t09.cmput301project.activities.AddNewIngredientView"
             android:exported="false"
             android:label="@string/title_activity_add_new_ingredient" >
             <intent-filter>
