--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmput301w13t09.cmput301project.activities.CreateRecipeView"
+            android:name="com.cmput301w13t09.cmput301project.CreateRecipeView"
             android:exported="false"
             android:label="@string/title_activity_create_recipe_view" >
             <intent-filter>
