Fixed alot of things that fell back to an older version... Stupid github

--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmput301w13t09.cmput301project.CreateRecipeView"
+            android:name="com.cmput301w13t09.cmput301project.activities.CreateRecipeView"
             android:exported="false"
             android:label="@string/title_activity_create_recipe_view" >
             <intent-filter>
@@ -61,14 +61,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.cmput301w13t09.cmput301project.CreateRecipeView"
-            android:label="@string/title_activity_create_recipe_view" >
-        </activity>
-        <activity
-            android:name="com.cmput301w13t09.cmput301project.AddNewRecipeView"
-            android:label="@string/title_activity_add_new_recipe_view" >
-        </activity>
+
     </application>
 
 </manifest>
