Almost have the view recipe view done still doesn't run...

--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -63,6 +63,16 @@
             </intent-filter>
             
         </activity>
+        <activity 
+            android:name="com.cmput301w13t09.cmput301project.activities.RecipeView"
+            android:exported="false"
+            android:label="">
+            <intent-filter >
+                <action android:name="activities.ViewRecipe"/>
+                
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
