--- a/CMPUT301ProjectTest/bin/AndroidManifest.xml
+++ b/CMPUT301ProjectTest/bin/AndroidManifest.xml
@@ -4,8 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="15" />
-
+<uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="17" />
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="com.cmput301w13t09.cmput301project" />
