--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <user-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -110,8 +113,7 @@
                 <action android:name="activities.RecipesOnWeb" />
 
                 <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>            
-                   
+            </intent-filter>
         </activity>
     </application>
 
