--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <user-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -113,6 +113,61 @@
                 <action android:name="activities.RecipesOnWeb" />
 
                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cmput301w13t09.cmput301project.activities.ReadRecipeExtensionView"
+            android:label="@string/title_activity_read_recipe_extension_view" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data 
+                    android:scheme="content"
+                    android:host="*"
+                    android:pathPattern=".*\\.recipe" />
+            </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data 
+                    android:scheme="content"
+                    android:host="*"
+                    android:mimeType="*/*.recipe"/>
+                
+                
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data 
+                    android:scheme="http"
+                    android:host="*"
+                    android:pathPattern=".*\\.recipe" />
+            </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data 
+                    android:scheme="http"
+                    android:host="*"
+                    android:mimeType="*/*.recipe"/>
+                
+                
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="file" />
+                <data android:host="*" />
+                <data android:pathPattern=".*\\.recipe" />
+                <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
     </application>
