--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -24,6 +24,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:scheme="file"
+                    android:host="*"
+                	android:pathPattern=".*\\.recipe"
+                    android:mimeType="*/*" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.MyPantryView"
@@ -126,17 +138,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmput301w13t09.cmput301project.activities.QueryRecipeView"
-            android:exported="false"
-            android:label="@string/title_activity_query_recipe_view" >
-            <intent-filter>
-                <action android:name="activities.QueryRecipes" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name="com.cmput301w13t09.cmput301project.activities.ReadRecipeExtensionView"
+            android:exported="true"
             android:label="@string/title_activity_read_recipe_extension_view" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -145,54 +148,26 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
+                    android:scheme="file"
                     android:host="*"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="content" />
+                	android:pathPattern=".*\\.recipe"
+                    android:mimeType="*/*" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
-
+				<data
+                    android:scheme="file"
+                	android:pathPattern=".*\\.recipe"
+                    android:mimeType="application/octet-stream" />
                 <data
-                    android:host="*"
-                    android:mimeType="*/*.recipe"
-                    android:scheme="content" />
+                    android:scheme="content"
+                	android:pathPattern=".*\\.recipe"
+                    android:mimeType="application/octet-stream" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="http" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:mimeType="*/*.recipe"
-                    android:scheme="http" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="file" />
-                <data android:host="*" />
-                <data android:pathPattern=".*\\.recipe" />
-                <data android:mimeType="*/*" />
-            </intent-filter>
+            
         </activity>
     </application>
 
