--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -31,10 +31,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:scheme="file"
                     android:host="*"
-                	android:pathPattern=".*\\.recipe"
-                    android:mimeType="*/*" />
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.recipe"
+                    android:scheme="file" />
             </intent-filter>
         </activity>
         <activity
@@ -148,26 +148,26 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:scheme="file"
                     android:host="*"
-                	android:pathPattern=".*\\.recipe"
-                    android:mimeType="*/*" />
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.recipe"
+                    android:scheme="file" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
-				<data
-                    android:scheme="file"
-                	android:pathPattern=".*\\.recipe"
-                    android:mimeType="application/octet-stream" />
+
                 <data
-                    android:scheme="content"
-                	android:pathPattern=".*\\.recipe"
-                    android:mimeType="application/octet-stream" />
+                    android:mimeType="application/octet-stream"
+                    android:pathPattern=".*\\.recipe"
+                    android:scheme="file" />
+                <data
+                    android:mimeType="application/octet-stream"
+                    android:pathPattern=".*\\.recipe"
+                    android:scheme="content" />
             </intent-filter>
-            
         </activity>
     </application>
 
