--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.android.email.permission.ACCESS_PROVIDER"/>
+    <uses-permission android:name="com.android.email.permission.READ_ATTACHMENT"/>
 
     <application
         android:allowBackup="true"
@@ -22,19 +25,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:mimeType="*/*"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="file" />
             </intent-filter>
         </activity>
         <activity
@@ -143,30 +134,56 @@
             android:label="@string/title_activity_read_recipe_extension_view" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
 
-                <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
                     android:host="*"
-                    android:mimeType="*/*"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="file" />
+                    android:mimeType="application/octet-stream"
+                    android:pathPattern=".*\\.recipe" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
 
-                <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:mimeType="application/octet-stream"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="file" />
+                    android:host="*"
+                    android:mimeType="application/recipe"
+                    android:pathPattern=".*\\.recipe" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data
-                    android:mimeType="application/octet-stream"
-                    android:pathPattern=".*\\.recipe"
-                    android:scheme="content" />
+                    android:host="*"
+                    android:mimeType="text/recipe"
+                    android:pathPattern=".*\\.recipe" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cmput301w13t09.cmput301project.activities.QueryRecipeView"
+            android:exported="false"
+            android:label="@string/title_activity_query_recipe_view" >
+            <intent-filter>
+                <action android:name="activities.QueryRecipes" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cmput301w13t09.cmput301project.activities.QueryRecipeOfflineView"
+            android:exported="false"
+            android:label="@string/title_activity_query_recipe_offline_view" >
+            <intent-filter>
+                <action android:name="activities.QueryOfflineRecipes" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
