Icons and Name Change (Derp).

--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.cmput301w13t09.cmput301project"
     android:versionCode="1"
     android:versionName="1.0" >
+    
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -18,7 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logodesign"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.MainMenuView"
