--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.MainMenuView"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,6 +64,7 @@
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.CreateNewRecipeView"
             android:exported="false"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_create_new_recipe_view" >
             <intent-filter>
                 <action android:name="activities.CreateNewRecipe" />
@@ -82,6 +84,7 @@
         </activity>
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.EditRecipeView"
+            android:windowSoftInputMode="stateHidden"
             android:exported="false"
             android:label="@string/title_activity_edit_recipe_view" >
             <intent-filter>
@@ -113,6 +116,7 @@
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.RecipesOnWebView"
             android:exported="false"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_recipes_on_web_view" >
             <intent-filter>
                 <action android:name="activities.RecipesOnWeb" />
@@ -123,6 +127,7 @@
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.RecipesOnWebViewOffline"
             android:exported="false"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_recipes_on_web_view_offline" >
             <intent-filter>
                 <action android:name="activities.RecipesOnWebOffline" />
@@ -132,7 +137,7 @@
         </activity>
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.ReadRecipeExtensionView"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_read_recipe_extension_view" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
