Fixed online loading

--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -193,6 +193,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.cmput301w13t09.cmput301project.activities.RecipeOnlineView"
+            android:exported="false"
+            android:label="@string/title_activity_view_recipe_view">
+            <intent-filter >
+                <action android:name="activities.RecipeOnlineView" />
+                
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
     </application>
 
