--- a/CMPUT301Project/AndroidManifest.xml
+++ b/CMPUT301Project/AndroidManifest.xml
@@ -137,7 +137,7 @@
         </activity>
         <activity
             android:name="com.cmput301w13t09.cmput301project.activities.ReadRecipeExtensionView"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_read_recipe_extension_view" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
